--- a/unit-2/time_series.py.ipynb
+++ b/unit-2/time_series.py.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -25,149 +25,195 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Amount_Requested</th>\n",
-       "      <th>Amount_Funded_By_Investors</th>\n",
-       "      <th>Interest_Rate</th>\n",
-       "      <th>Loan_Length</th>\n",
-       "      <th>Loan_Purpose</th>\n",
-       "      <th>Debt_To_Income_Ratio</th>\n",
-       "      <th>State</th>\n",
-       "      <th>Home_Ownership</th>\n",
-       "      <th>Monthly_Income</th>\n",
-       "      <th>FICO_Range</th>\n",
-       "      <th>Open_CREDIT_Lines</th>\n",
-       "      <th>Revolving_CREDIT_Balance</th>\n",
-       "      <th>Inquiries_in_the_Last_6_Months</th>\n",
-       "      <th>Employment_Length</th>\n",
-       "      <th>FICO_Score</th>\n",
+       "      <th>id</th>\n",
+       "      <th>member_id</th>\n",
+       "      <th>loan_amnt</th>\n",
+       "      <th>funded_amnt</th>\n",
+       "      <th>funded_amnt_inv</th>\n",
+       "      <th>term</th>\n",
+       "      <th>int_rate</th>\n",
+       "      <th>installment</th>\n",
+       "      <th>grade</th>\n",
+       "      <th>sub_grade</th>\n",
+       "      <th>...</th>\n",
+       "      <th>num_tl_90g_dpd_24m</th>\n",
+       "      <th>num_tl_op_past_12m</th>\n",
+       "      <th>pct_tl_nvr_dlq</th>\n",
+       "      <th>percent_bc_gt_75</th>\n",
+       "      <th>pub_rec_bankruptcies</th>\n",
+       "      <th>tax_liens</th>\n",
+       "      <th>tot_hi_cred_lim</th>\n",
+       "      <th>total_bal_ex_mort</th>\n",
+       "      <th>total_bc_limit</th>\n",
+       "      <th>total_il_high_credit_limit</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>20000</td>\n",
-       "      <td>20000.0</td>\n",
-       "      <td>8.90</td>\n",
-       "      <td>36</td>\n",
-       "      <td>debt_consolidation</td>\n",
-       "      <td>14.90%</td>\n",
-       "      <td>SC</td>\n",
-       "      <td>MORTGAGE</td>\n",
-       "      <td>6541.67</td>\n",
-       "      <td>735-739</td>\n",
-       "      <td>14.0</td>\n",
-       "      <td>14272.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>&lt; 1 year</td>\n",
-       "      <td>735</td>\n",
+       "      <td>1077501</td>\n",
+       "      <td>1296599.0</td>\n",
+       "      <td>5000.0</td>\n",
+       "      <td>5000.0</td>\n",
+       "      <td>4975.0</td>\n",
+       "      <td>36 months</td>\n",
+       "      <td>10.65%</td>\n",
+       "      <td>162.87</td>\n",
+       "      <td>B</td>\n",
+       "      <td>B2</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>19200</td>\n",
-       "      <td>19200.0</td>\n",
-       "      <td>12.12</td>\n",
-       "      <td>36</td>\n",
-       "      <td>debt_consolidation</td>\n",
-       "      <td>28.36%</td>\n",
-       "      <td>TX</td>\n",
-       "      <td>MORTGAGE</td>\n",
-       "      <td>4583.33</td>\n",
-       "      <td>715-719</td>\n",
-       "      <td>12.0</td>\n",
-       "      <td>11140.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>2 years</td>\n",
-       "      <td>715</td>\n",
+       "      <td>1077430</td>\n",
+       "      <td>1314167.0</td>\n",
+       "      <td>2500.0</td>\n",
+       "      <td>2500.0</td>\n",
+       "      <td>2500.0</td>\n",
+       "      <td>60 months</td>\n",
+       "      <td>15.27%</td>\n",
+       "      <td>59.83</td>\n",
+       "      <td>C</td>\n",
+       "      <td>C4</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>35000</td>\n",
-       "      <td>35000.0</td>\n",
-       "      <td>21.98</td>\n",
-       "      <td>60</td>\n",
-       "      <td>debt_consolidation</td>\n",
-       "      <td>23.81%</td>\n",
-       "      <td>CA</td>\n",
-       "      <td>MORTGAGE</td>\n",
-       "      <td>11500.00</td>\n",
-       "      <td>690-694</td>\n",
-       "      <td>14.0</td>\n",
-       "      <td>21977.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>2 years</td>\n",
-       "      <td>690</td>\n",
+       "      <td>1077175</td>\n",
+       "      <td>1313524.0</td>\n",
+       "      <td>2400.0</td>\n",
+       "      <td>2400.0</td>\n",
+       "      <td>2400.0</td>\n",
+       "      <td>36 months</td>\n",
+       "      <td>15.96%</td>\n",
+       "      <td>84.33</td>\n",
+       "      <td>C</td>\n",
+       "      <td>C5</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>10000</td>\n",
-       "      <td>9975.0</td>\n",
-       "      <td>9.99</td>\n",
-       "      <td>36</td>\n",
-       "      <td>debt_consolidation</td>\n",
-       "      <td>14.30%</td>\n",
-       "      <td>KS</td>\n",
-       "      <td>MORTGAGE</td>\n",
-       "      <td>3833.33</td>\n",
-       "      <td>695-699</td>\n",
-       "      <td>10.0</td>\n",
-       "      <td>9346.0</td>\n",
+       "      <td>1076863</td>\n",
+       "      <td>1277178.0</td>\n",
+       "      <td>10000.0</td>\n",
+       "      <td>10000.0</td>\n",
+       "      <td>10000.0</td>\n",
+       "      <td>36 months</td>\n",
+       "      <td>13.49%</td>\n",
+       "      <td>339.31</td>\n",
+       "      <td>C</td>\n",
+       "      <td>C1</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>5 years</td>\n",
-       "      <td>695</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>12000</td>\n",
-       "      <td>12000.0</td>\n",
-       "      <td>11.71</td>\n",
-       "      <td>36</td>\n",
-       "      <td>credit_card</td>\n",
-       "      <td>18.78%</td>\n",
-       "      <td>NJ</td>\n",
-       "      <td>RENT</td>\n",
-       "      <td>3195.00</td>\n",
-       "      <td>695-699</td>\n",
-       "      <td>11.0</td>\n",
-       "      <td>14469.0</td>\n",
+       "      <td>1075358</td>\n",
+       "      <td>1311748.0</td>\n",
+       "      <td>3000.0</td>\n",
+       "      <td>3000.0</td>\n",
+       "      <td>3000.0</td>\n",
+       "      <td>60 months</td>\n",
+       "      <td>12.69%</td>\n",
+       "      <td>67.79</td>\n",
+       "      <td>B</td>\n",
+       "      <td>B5</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>9 years</td>\n",
-       "      <td>695</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>5 rows × 111 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "   Amount_Requested  Amount_Funded_By_Investors  Interest_Rate  Loan_Length  \\\n",
-       "0             20000                     20000.0           8.90           36   \n",
-       "1             19200                     19200.0          12.12           36   \n",
-       "2             35000                     35000.0          21.98           60   \n",
-       "3             10000                      9975.0           9.99           36   \n",
-       "4             12000                     12000.0          11.71           36   \n",
+       "        id  member_id  loan_amnt  funded_amnt  funded_amnt_inv        term  \\\n",
+       "0  1077501  1296599.0     5000.0       5000.0           4975.0   36 months   \n",
+       "1  1077430  1314167.0     2500.0       2500.0           2500.0   60 months   \n",
+       "2  1077175  1313524.0     2400.0       2400.0           2400.0   36 months   \n",
+       "3  1076863  1277178.0    10000.0      10000.0          10000.0   36 months   \n",
+       "4  1075358  1311748.0     3000.0       3000.0           3000.0   60 months   \n",
        "\n",
-       "         Loan_Purpose Debt_To_Income_Ratio State Home_Ownership  \\\n",
-       "0  debt_consolidation               14.90%    SC       MORTGAGE   \n",
-       "1  debt_consolidation               28.36%    TX       MORTGAGE   \n",
-       "2  debt_consolidation               23.81%    CA       MORTGAGE   \n",
-       "3  debt_consolidation               14.30%    KS       MORTGAGE   \n",
-       "4         credit_card               18.78%    NJ           RENT   \n",
+       "  int_rate  installment grade sub_grade            ...              \\\n",
+       "0   10.65%       162.87     B        B2            ...               \n",
+       "1   15.27%        59.83     C        C4            ...               \n",
+       "2   15.96%        84.33     C        C5            ...               \n",
+       "3   13.49%       339.31     C        C1            ...               \n",
+       "4   12.69%        67.79     B        B5            ...               \n",
        "\n",
-       "   Monthly_Income FICO_Range  Open_CREDIT_Lines  Revolving_CREDIT_Balance  \\\n",
-       "0         6541.67    735-739               14.0                   14272.0   \n",
-       "1         4583.33    715-719               12.0                   11140.0   \n",
-       "2        11500.00    690-694               14.0                   21977.0   \n",
-       "3         3833.33    695-699               10.0                    9346.0   \n",
-       "4         3195.00    695-699               11.0                   14469.0   \n",
+       "  num_tl_90g_dpd_24m num_tl_op_past_12m pct_tl_nvr_dlq  percent_bc_gt_75  \\\n",
+       "0                NaN                NaN            NaN               NaN   \n",
+       "1                NaN                NaN            NaN               NaN   \n",
+       "2                NaN                NaN            NaN               NaN   \n",
+       "3                NaN                NaN            NaN               NaN   \n",
+       "4                NaN                NaN            NaN               NaN   \n",
        "\n",
-       "   Inquiries_in_the_Last_6_Months Employment_Length  FICO_Score  \n",
-       "0                             2.0          < 1 year         735  \n",
-       "1                             1.0           2 years         715  \n",
-       "2                             1.0           2 years         690  \n",
-       "3                             0.0           5 years         695  \n",
-       "4                             0.0           9 years         695  "
+       "  pub_rec_bankruptcies tax_liens tot_hi_cred_lim total_bal_ex_mort  \\\n",
+       "0                  0.0       0.0             NaN               NaN   \n",
+       "1                  0.0       0.0             NaN               NaN   \n",
+       "2                  0.0       0.0             NaN               NaN   \n",
+       "3                  0.0       0.0             NaN               NaN   \n",
+       "4                  0.0       0.0             NaN               NaN   \n",
+       "\n",
+       "  total_bc_limit total_il_high_credit_limit  \n",
+       "0            NaN                        NaN  \n",
+       "1            NaN                        NaN  \n",
+       "2            NaN                        NaN  \n",
+       "3            NaN                        NaN  \n",
+       "4            NaN                        NaN  \n",
+       "\n",
+       "[5 rows x 111 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -176,7 +222,7 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "\n",
-    "df = pd.read_csv('https://raw.githubusercontent.com/bwilson668/thinkful/master/unit-2/loansData_clean.csv', header=0, low_memory=False)\n",
+    "df = pd.read_csv('https://raw.githubusercontent.com/bwilson668/thinkful/master/unit-2/LoanStats3a.csv', header=1, low_memory=False)\n",
     "\n",
     "df.head()"
    ]
@@ -185,7 +231,165 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "2) Convert the data to "
+    "2) Convert date fields to a datetime instead of string to allow it to be used in the time series analysis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# create a new column called \"issue_d_format\" and populate it with the datetime object of the original string datetime\n",
+    "df['issue_d_format'] = pd.to_datetime(df['issue_d'])\n",
+    "\n",
+    "# build a dataframe that has an index on the formated datetime\n",
+    "dfts = df.set_index('issue_d_format')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "It's also possible to automatically set the datetime fields and index from reading the csv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Timestamp('2011-12-01 00:00:00')"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df2 = pd.read_csv('https://raw.githubusercontent.com/bwilson668/thinkful/master/unit-2/LoanStats3a.csv', header=1, low_memory=False, parse_dates=['issue_d'], index_col='issue_d')\n",
+    "df2.issue_d[0]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Continue the transformations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "200706.0      24\n",
+      "200707.0      63\n",
+      "200708.0      74\n",
+      "200709.0      53\n",
+      "200710.0     105\n",
+      "200711.0     112\n",
+      "200712.0     172\n",
+      "200801.0     305\n",
+      "200802.0     306\n",
+      "200803.0     402\n",
+      "200804.0     259\n",
+      "200805.0     115\n",
+      "200806.0     124\n",
+      "200807.0     141\n",
+      "200808.0     100\n",
+      "200809.0      57\n",
+      "200810.0     122\n",
+      "200811.0     209\n",
+      "200812.0     253\n",
+      "200901.0     269\n",
+      "200902.0     302\n",
+      "200903.0     324\n",
+      "200904.0     333\n",
+      "200905.0     359\n",
+      "200906.0     406\n",
+      "200907.0     411\n",
+      "200908.0     446\n",
+      "200909.0     507\n",
+      "200910.0     604\n",
+      "200911.0     662\n",
+      "200912.0     658\n",
+      "201001.0     662\n",
+      "201002.0     682\n",
+      "201003.0     828\n",
+      "201004.0     912\n",
+      "201005.0     989\n",
+      "201006.0    1105\n",
+      "201007.0    1204\n",
+      "201008.0    1175\n",
+      "201009.0    1189\n",
+      "201010.0    1232\n",
+      "201011.0    1224\n",
+      "201012.0    1335\n",
+      "201101.0    1380\n",
+      "201102.0    1298\n",
+      "201103.0    1448\n",
+      "201104.0    1563\n",
+      "201105.0    1704\n",
+      "201106.0    1835\n",
+      "201107.0    1875\n",
+      "201108.0    1934\n",
+      "201109.0    2067\n",
+      "201110.0    2118\n",
+      "201111.0    2232\n",
+      "201112.0    2267\n",
+      "Name: issue_d, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "\n",
+    "# group the loans by month\n",
+    "year_month_summary = dfts.groupby(lambda x : x.year * 100 + x.month).count()\n",
+    "\n",
+    "loan_count_summary = year_month_summary['issue_d']\n",
+    "print loan_count_summary"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "3) Plot out the ACF and PACF"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "import statsmodels.api as sm\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "\n",
+    "fig = plt.figure(figsize=(12,8))\n",
+    "ax1 = fig.add_subplot(211)\n",
+    "fig = sm.graphics.tsa.plot_acf(loan_count_summary, lags=40, ax=ax1)\n",
+    "ax2 = fig.add_subplot(212)\n",
+    "fig = sm.graphics.tsa.plot_pacf(loan_count_summary, lags=40, ax=ax2)"
    ]
   }
  ],
