--- a/unit-4/Overfitting.ipynb
+++ b/unit-4/Overfitting.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -97,7 +97,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -137,7 +137,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -156,9 +156,40 @@
     "\n",
     "The quadratic regression has a lower confidence interval and standard error.\n",
     "\n",
-    "I suspect when we run the test data through it, the quadratic will not predict the target variable as well as the linear regression.\n",
+    "I suspect when we run the test data through it, the quadratic will not predict the target variable as well as the linear regression."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6.54754127446\n",
+      "7.98738294501\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import mean_squared_error\n",
     "\n",
-    "__How do I run the test data set through the model I just created and optimized for?__"
+    "ols_predict = poly_1.predict(test_df['X'])[700:]\n",
+    "quad_predict = poly_2.predict(test_df['X'])[700:]\n",
+    "\n",
+    "print mean_squared_error(test_df['y'], ols_predict)\n",
+    "print mean_squared_error(test_df['y'], quad_predict)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "What do you know! The simpler linear regression has a lower average error when predicting against the test data."
    ]
   }
  ],
