more data exploration

--- a/unit-4/random_forest.ipynb
+++ b/unit-4/random_forest.ipynb
@@ -7,7 +7,7 @@
     "# Decision Tree -- Random Forest\n",
     "#### Ben Wilson\n",
     "\n",
-    "Our goal in this lesson is to optimize a decision tree through the random forest algorithm. This will find the right order for our features."
+    "Our goal in this lesson is to implement random forest algorithm. This will find the right order for our features."
    ]
   },
   {
