working with Nemanja

--- a/unit-5/First Look.ipynb
+++ b/unit-5/First Look.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -42,10 +42,10 @@
        "  <th>Method:</th>             <td>Least Squares</td>  <th>  F-statistic:       </th> <td>   2.953</td>\n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Date:</th>             <td>Tue, 16 Aug 2016</td> <th>  Prob (F-statistic):</th>  <td>0.0731</td> \n",
+       "  <th>Date:</th>             <td>Wed, 17 Aug 2016</td> <th>  Prob (F-statistic):</th>  <td>0.0731</td> \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Time:</th>                 <td>21:00:00</td>     <th>  Log-Likelihood:    </th> <td> -125.21</td>\n",
+       "  <th>Time:</th>                 <td>17:31:45</td>     <th>  Log-Likelihood:    </th> <td> -125.21</td>\n",
        "</tr>\n",
        "<tr>\n",
        "  <th>No. Observations:</th>      <td>    25</td>      <th>  AIC:               </th> <td>   256.4</td>\n",
@@ -97,8 +97,8 @@
        "Dep. Variable:                    USA   R-squared:                       0.212\n",
        "Model:                            OLS   Adj. R-squared:                  0.140\n",
        "Method:                 Least Squares   F-statistic:                     2.953\n",
-       "Date:                Tue, 16 Aug 2016   Prob (F-statistic):             0.0731\n",
-       "Time:                        21:00:00   Log-Likelihood:                -125.21\n",
+       "Date:                Wed, 17 Aug 2016   Prob (F-statistic):             0.0731\n",
+       "Time:                        17:31:45   Log-Likelihood:                -125.21\n",
        "No. Observations:                  25   AIC:                             256.4\n",
        "Df Residuals:                      22   BIC:                             260.1\n",
        "Df Model:                           2                                         \n",
@@ -121,7 +121,7 @@
        "\"\"\""
       ]
      },
-     "execution_count": 40,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -142,6 +142,76 @@
     "\n",
     "usa = country_regression('USA')\n",
     "usa.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<function matplotlib.pyplot.show>"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAX8AAAEACAYAAABbMHZzAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAFStJREFUeJzt3WGMVed95/Hv3wXUaVwoXo3NysRz03W6ONIijBbnhVPt\npTWsG6khyovY7L5oookUiyb1qi9q030B2kbbEilZRZHYZmuycqIwEEVVbUuRg5GZrVJtwsiB4MRA\nqJI7tnEMd5MU2dU0YOe/L+4Zc41nYO7MnXvvzPP9SFecee655z7n6PA75z7Pc86JzESSVJab+l0B\nSVLvGf6SVCDDX5IKZPhLUoEMf0kqkOEvSQWac/hHxPqIeDYifhgRz0fEp6vyPRHxckR8r3rd3/aZ\n3RFxLiJOR8T2xVgBSVLnYq7j/CNiHbAuM09GxM3Ac8AO4AHgtcz8/DXz3wUcBLYA64GjwHvTCwsk\nqe/mfOafma9m5slq+nXgNHB79XbM8JEdwKHMfCMzG8A54J6FVVeS1A3zavOPiBqwCfhuVfSpiDgZ\nEY9FxJqq7HbgpbaPnefqwUKS1Ecdh3/V5PMN4OHqF8B+4LczcxPwKvC57lZRktRtKzqZOSJW0Ar+\nr2bmEwCZ2Wyb5W+Ap6rp88C7295bX5Vdu0z7ACRpHjJzpib3Oen0zP/LwAuZ+YXpgqojeNpHgB9U\n008CD0bEqoh4D3AncHymhWamr0z27NnT9zoMystt4bZwW1z/tVBzPvOPiHuB/ww8HxEngAT+HPhP\nEbEJ+BXQAD5ZBfoLEfF14AXgCrAru1FjSdKCzTn8M/MfgF+b4a2nr/OZvwT+ch71kiQtIq/wHSD1\ner3fVRgYbour3BZXuS26Z84XeS1aBSJsDZKkDkUE2cMOX0nSMmD4S1KBDH9JKlCx4d9sNpmYmKDZ\nbN54ZklaZooM/7Gxw4yMbGDbtocYGdnA2NjhfldJknqquNE+zWaTkZENTE0dAzYCpxga2srk5BmG\nh4d7Vg9JWghH+3So0WiwalWNVvADbGTlyhEajUb/KiVJPVZc+NdqNS5fbgCnqpJTXLkySa1W61+l\nJKnHigv/4eFhDhzYz9DQVlav3szQ0FYOHNhvk4+kohTX5j+t2WzSaDSo1WoGv6QlZ6Ft/sWGvyQt\nZXb4SpI6ZvhLUoEMf0kqkOEvSQUy/CWpQIa/JBXI8JekAhn+klQgw1+SCmT4S1KBDH9JKpDhL0kF\nMvwlqUCGvyQVyPCXpALNOfwjYn1EPBsRP4yI5yPiT6rytRFxJCLORsS3ImJN22d2R8S5iDgdEdsX\nYwUkSZ2b88NcImIdsC4zT0bEzcBzwA7g48DPMvOzEfEIsDYzH42I9wFfA7YA64GjwHuvfXKLD3OR\npM717GEumflqZp6spl8HTtMK9R3A49VsjwMfrqY/BBzKzDcyswGcA+6Zb0UlSd0zrzb/iKgBm4Dv\nALdl5gVoHSCAW6vZbgdeavvY+apMktRnHYd/1eTzDeDh6hfAtW02tuFI0oBb0cnMEbGCVvB/NTOf\nqIovRMRtmXmh6he4WJWfB97d9vH1Vdk77N27963per1OvV7vpFqStOyNj48zPj7eteXNucMXICK+\nAvy/zPzTtrJ9wM8zc98sHb7vp9Xc8wx2+EpSVyy0w7eT0T73An8PPE+raSeBPweOA1+ndZY/CXw0\nM/+p+sxuYBS4QquZ6MgMyzX8JalDPQv/xWL4S1LnejbUU5K0fBj+klQgw1+SCmT4S1KBDH9JKpDh\nL0kFMvwlqUCGvyQVyPCXpAIZ/pJUIMNfkgpk+EtSgQx/SSqQ4a+eazabTExM0Gw2+10VqViGv3pq\nbOwwIyMb2LbtIUZGNjA2drjfVZKK5P381TPNZpORkQ1MTR0DNgKnGBrayuTkGYaHh/tdPWlJ8X7+\nWjIajQarVtVoBT/ARlauHKHRaPSvUlKhDH/1TK1W4/LlBnCqKjnFlSuT1Gq1/lVKKpThr54ZHh7m\nwIH9DA1tZfXqzQwNbeXAgf02+Uh9YJu/eq7ZbNJoNKjVaga/NE8+wF2SCmSHrySpY4a/JBXI8Jek\nAhn+klQgw1+SCmT4S1KBDH9JKpDhL0kFmnP4R8SBiLgQEafayvZExMsR8b3qdX/be7sj4lxEnI6I\n7d2uuCRp/jo58//fwH+cofzzmbm5ej0NEBF3AR8F7gL+ANgfEfO+Ek2S1F1zDv/M/DbwixneminU\ndwCHMvONzGwA54B75lVDSVLXdaPN/1MRcTIiHouINVXZ7cBLbfOcr8okSQNgxQI/vx/4b5mZEfEZ\n4HPAJzpdyN69e9+artfr1Ov1BVZLkpaX8fFxxsfHu7a8ju7qGREjwFOZufF670XEo0Bm5r7qvaeB\nPZn53Rk+5109JalDvb6rZ9DWxh8R69re+wjwg2r6SeDBiFgVEe8B7gSOz7eSkqTumnOzT0QcBOrA\nv4qIF4E9wNaI2AT8CmgAnwTIzBci4uvAC8AVYJen95I0OHyYiyQtQT7MRZLUMcNfkgpk+EtSgQx/\nSSqQ4S9JBTL8JalAhr8kFcjwl6QCGf6SVCDDX5IKZPhLUoEMf0kqkOEvSQUy/CWpQIa/JBXI8Jek\nAhn+klQgw1+SCmT4S1KBDH9JKpDhL0kFMvwlqUCG/xLTbDaZmJig2Wz2uyqSljDDfwkZGzvMyMgG\ntm17iJGRDYyNHe53lRadBztpcURm9rcCEdnvOiwFzWaTkZENTE0dAzYCpxga2srk5BmGh4f7Xb2O\nNJtNGo0GtVrtunUfGzvM6OguVq2qcflygwMH9rNz5wM9rKk0uCKCzIz5ft4z/yWi0WiwalWNVvAD\nbGTlyhEajUb/KjUPc/310mw2GR3dxdTUMS5deo6pqWOMju7yF4DUJYb/ElGrtc5+4VRVcoorVyap\n1Wr9q1SHOgn05XKwkwaV4b9EDA8Pc+DAfoaGtrJ69WaGhrZy4MD+JdXk00mgz+dgZ/+ANHdzDv+I\nOBARFyLiVFvZ2og4EhFnI+JbEbGm7b3dEXEuIk5HxPZuV7xEO3c+wOTkGY4e/RKTk2eWXPt3rVbj\nl7/8MXAQaHK9QO/0YFdiZ7i0EHPu8I2IDwCvA1/JzI1V2T7gZ5n52Yh4BFibmY9GxPuArwFbgPXA\nUeC9M/Xs2uFbjrGxw3zsY5/k8uVh4BVWrryJxx9/7LoHsbl0Di+nznBprnrW4ZuZ3wZ+cU3xDuDx\navpx4MPV9IeAQ5n5RmY2gHPAPfOtpJZ+k8Z0e//ly39Pa3f4v6xYsYr77vu9635ueHiYLVu2XDfE\n7R+QOrfQNv9bM/MCQGa+Ctxald8OvNQ23/mqTPOwHJo0FjOgl0NnuNRrK7q8vHm13+zdu/et6Xq9\nTr1e71J1lr72ETJTU60mjdHRrdx33+8tqSaNtwd0az26FdDT/QOjo1tZuXKEK1cml1xnuHQj4+Pj\njI+Pd2+BmTnnFzACnGr7+zRwWzW9DjhdTT8KPNI239PA+2dZZmp2x48fzzVrNifkW6/Vq+/O48eP\n97tqHTt48FAODd2Sq1ffnUNDt+TBg4e6uvyLFy/m8ePH8+LFi11drjSIquzsKMPbXx1d4RsRNeCp\nzPx31d/7gJ9n5r5ZOnzfT6u55xns8J2X5daZ2Ww2OXHiBAB33333nNbhRp2+c71iWFpOFtrh28lZ\n/0HgFeCXwIvAx4G1tEbynAWOAL/VNv9u4B9p/TrYfp3lLtJxcflY7DPmXppelzVrNs+4Lteevd9o\n/hu9Ly1XLPDMf94f7NbL8J+b5dCkcfHixRwauiXh+1UT1vdzaOiWWYP+r//6f113/hstT1rOFhr+\n3e7w1SIZHh5e8k0a0yN+Wh3XcO2In2s7th9++HdZterfMNMIoeHhYU6cOMFNN7171vclzc7bO6hn\nrjckc+ahoHdw+fJPZpx/bOwwO3Y8wD//87kZ35d0fYa/euZ6t2yY6cDw5puv8IUvfPYd80PrV8K/\n/Mv/Ab4M1IE7l+T9jqR+8X7+6rnZRudM37+/faz+zp0PvGP+iYkJtm17iEuXnpteIu961wf427/9\nItu3exsplWGho30MfwGDM1zSe/lIc+PDXLRgg3T7iLncy2c53N5a6jfP/Au3lM+iB+XXitQPCz3z\nd6hn4a43/HLQA3U5DH+V+sVmn8J5R0ypTIZ/4Ww/l8pkm78A28+lpcahnpJUIId6akGW+uMhJc2P\n4V+oZrPJZz7z37njjt8ZiPH9knrLZp8CTd9GYWrqFuBnwP8E7lqU8f32JUiLw2YfdaT9mcBwDhgH\ndgH/umsPVJ82SFcOS3o7w78wM906ufVo5me6Or6//SBz6dJzTE0dY3R0l30L0oAw/Asz00VdcJZf\n//U/7ur4/pnvz9/dXxaS5s/wL8xMF3X9xV/8V1588Ufs3PlA177HK4elwWaHb6F60RE72/35JS2c\nF3lpoLUfZABH/khd4mgfDbTp+/MfPfqsI3+kAeKZvxbdUn5mgDSoPPPXwHPkjzR4DH8tyFzuDeTI\nH2nwGP6at7lewdurZwZ4kzpp7mzz17zMpx1/MYeXTg8rXbWq9SvDYaVa7hzqqb6YmJhg27aHuHTp\nubfKVq/ezNGjX2LLli09rYsdyirRQHT4RkQjIr4fESci4nhVtjYijkTE2Yj4VkSs6cZ3aTAMUju+\nHcpS57rV5v8roJ6Zd2fmPVXZo8DRzPy3wLPA7i59lwbAID37d5AORNJS0ZVmn4j4CfDvM/NnbWVn\ngP+QmRciYh0wnpkbZviszT5L2KDcr99bSag0A9HmHxE/Bv4JeBP4UmY+FhG/yMy1bfP8PDNvmeGz\nhr+6YlAORFK7xdovFxr+K7pUj3sz86cRMQwciYizwLWJPmvC7927963per1OvV7vUrXKU3IADg8P\nF7fOGmzdHIU2Pj7O+Ph41+rW9dE+EbEHeB34BK1+gOlmn2OZedcM83vm3yUOd5QGx2KPQuv7aJ+I\n+I2IuLmafhewHXgeeBL4WDXbHwFPLPS7NDufnCUNlkEfhdaN0T63Ad+OiBPAd4CnMvMIsA/YVjUB\n/T7wV134Ls1i0Hc0qTSDPgptwW3+mfkTYNMM5T8H7lvo8jU3b9/RWj8xB2lHk0ozPRx6dHTr20ah\nDUq/lFf4LiMOd5QGz6CO9jH8l5mSR/tIJTH8JalAfR/tI0laegx/SSqQ4S9JBTL8JalAhr8kFcjw\nl6QCGf6SVCDDX5IKZPhLUoEM/z5oNptMTEx4u2VJfWP499jY2GFGRjawbdtDjIxsYGzscL+rJKlA\n3tunhxb7yT6SyuG9fZaQmR64smLFHXzzm9+0CUhSTxn+PTTTk31ee+0sn/7052wCktRTNvv02PQD\nV1asuIPXXjsL7AX+DJuAJHXCZp8lZufOB5icPMMXv/hf+M3fvJNW8IPP3JXUS4Z/HwwPD/PBD36Q\nN944z6A+3FnS8mb498n0w52HhrayevVmhoa2DtTDnSUtb7b595nP3JU0Hz7DV5IKZIevJKljhr8k\nFcjwl6QCGf6SVCDDX5IKtOjhHxH3R8SZiPhRRDyy2N8nSbqxRR3qGRE3AT8Cfh94BZgAHszMM23z\nONRTkjo06EM97wHOZeZkZl4BDgE7Fvk7JXWBT5xb3hY7/G8HXmr7++WqTNIA84lzy58dvpLeptls\nMjq6i6mpY1y69BxTU8cYHd3lL4BlZsUiL/88cEfb3+ursrfZu3fvW9P1ep16vb7I1ZI0m+knzk1N\nXX3i3PTtxr3/VP+Mj48zPj7eteUtdofvrwFnaXX4/hQ4DuzMzNNt89jhKw0QnzW9NAx0h29mvgl8\nCjgC/BA41B78kgaPtxsvg3f1lDQjbzc+2LylsyQVaKCbfSRJg8nwl6QCGf6SVCDDX5IKZPhLUoEM\nf0kqkOEvSQUy/CWpQIa/JBXI8JekAhn+klQgw1+SCmT4S1KBDH9JKpDhL0kFMvwlqUCGvyQVyPCX\npAIZ/pJUIMNfkgpk+EtSgQx/SSqQ4S9JBTL8JalAhr8kFcjwl6QCGf6SVKAFhX9E7ImIlyPie9Xr\n/rb3dkfEuYg4HRHbF15VSVK3dOPM//OZubl6PQ0QEXcBHwXuAv4A2B8R0YXvWtbGx8f7XYWB4ba4\nym1xlduie7oR/jOF+g7gUGa+kZkN4BxwTxe+a1lzx77KbXGV2+Iqt0X3dCP8PxURJyPisYhYU5Xd\nDrzUNs/5qkySNABuGP4R8UxEnGp7PV/9+4fAfuC3M3MT8CrwucWusCRp4SIzu7OgiBHgqczcGBGP\nApmZ+6r3ngb2ZOZ3Z/hcdyogSYXJzHn3pa5YyBdHxLrMfLX68yPAD6rpJ4GvRcT/oNXccydwfKZl\nLKTykqT5WVD4A5+NiE3Ar4AG8EmAzHwhIr4OvABcAXZlt35iSJIWrGvNPpKkpaOvV/hGxP0RcSYi\nfhQRj/SzLv0QEY2I+H5EnIiI41XZ2og4EhFnI+JbbSOolpWIOBARFyLiVFvZrOu+nC8anGVbFHcB\nZUSsj4hnI+KH1cCSP6nKi9svZtgWn67Ku7dfZGZfXrQOPP8IjAArgZPAhn7Vp0/b4MfA2mvK9gF/\nVk0/AvxVv+u5SOv+AWATcOpG6w68DzhBq5myVu030e91WORtsQf40xnmvWu5bgtgHbCpmr4ZOAts\nKHG/uM626Np+0c8z/3uAc5k5mZlXgEO0Lg4rSfDOX187gMer6ceBD/e0Rj2Smd8GfnFN8Wzr/iGW\n8UWDs2wLKOwCysx8NTNPVtOvA6eB9RS4X8yyLaavlerKftHP8L/2QrCXKe9CsASeiYiJiPhEVXZb\nZl6A1g4A3Nq32vXerbOse6kXDRZ7AWVE1Gj9GvoOs/+fKG1bTA+V78p+4V09++vezNwMfBD444j4\nXVoHhHYl98iXvO7FXkAZETcD3wAers56i/0/McO26Np+0c/wPw/c0fb3+qqsGJn50+rfJvB3tH6m\nXYiI26B1HQVwsX817LnZ1v088O62+Zb9vpKZzawac4G/4epP+GW9LSJiBa2w+2pmPlEVF7lfzLQt\nurlf9DP8J4A7I2IkIlYBD9K6OKwIEfEb1VGdiHgXsB14ntY2+Fg12x8BT8y4gOUheHv75Wzr/iTw\nYESsioj3cJ2LBpewt22LKuSmXXsB5XLeFl8GXsjML7SVlbpfvGNbdHW/6HOP9v20erHPAY/2u4e9\nx+v+HlojnE7QCv1Hq/JbgKPVdjkC/Fa/67pI638QeAX4JfAi8HFg7WzrDuymNYLhNLC93/Xvwbb4\nCnCq2kf+jla797LeFsC9wJtt/y++V2XErP8nCtwWXdsvvMhLkgpkh68kFcjwl6QCGf6SVCDDX5IK\nZPhLUoEMf0kqkOEvSQUy/CWpQP8fESXCgfFd3CEAAAAASUVORK5CYII=\n",
+      "text/plain": [
+       "<matplotlib.figure.Figure at 0x104050b10>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "%matplotlib inline\n",
+    "\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "plt.scatter(df['USA'], df['USA_prev'])\n",
+    "plt.show"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<function matplotlib.pyplot.show>"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAXwAAAEACAYAAACwB81wAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAFr1JREFUeJzt3X+MHHd9xvH3Y3yXrjEOR1nbUgO3FJTYSTGN04SgSGXd\n2JQfFXFFleCqFYEDCZkQWtoqTqsq1z+KCP8gqtRSaQ/kIjickIaEChonyi39JfDlF06TswO0eyQh\nPhZCXRkWfCGf/rFzzuZy52R3525md56XdPLO3M7M59b24/Fn5vsdRQRmZjb41mRdgJmZrQ4HvplZ\nQTjwzcwKwoFvZlYQDnwzs4Jw4JuZFUTPgS/pXEkPSLo/+fWEpGsljUg6JOmYpDslnZ1GwWZm1h2l\neR++pDXA48AbgWuAH0XEJyRdB4xExL7UDmZmZh1Ju6WzE/huRDwGXAEcSNYfAHanfCwzM+tA2oF/\nFfCF5PWmiJgDiIjjwMaUj2VmZh1ILfAlDQHvBG5JVi3uFXkOBzOzDK1NcV9vA+6LiB8my3OSNkXE\nnKTNwA+W2kiS/yEwM+tCRKiT96fZ0tkDTLYt3wFcnbx+D3D7chtGRO6/brjhhsxrcJ2us5/r7Ica\n+6nObqQS+JLW0bpg+09tq28Edkk6BlwOfDyNY5mZWXdSaelExE+B8qJ1T9H6R8DMzHLAI21fpGq1\nmnUJL4rrTJfrTE8/1Aj9U2c3Uh141VUBUmRdg5lZv5FEZHjR1szMcsyBb2ZWEA58M7OCcOCbmRWE\nA9/MrCAc+GZmBeHANzMrCAe+mVlBOPDNzArCgW9mVhAOfDOzgnDgm5kVhAPfzKwgHPhmZgXhwDcz\nKwgHvplZQTjwzcwKIq2HmJ8t6RZJM5IelvRGSSOSDkk6JulOSWencSwzM+tOWmf4nwK+GhFbgTcA\nR4F9wN0RcR5wD3B9SscyM7Mu9PxMW0kbgAci4rWL1h8F3hwRc5I2A7WI2LLE9n6mrZlZh7J6pu1r\ngB9K+qyk+yV9WtI6YFNEzAFExHFgYwrHMjOzLqUR+GuB7cDfRsR24Ce02jmLT9t9Gm9WEI1Gg+np\naRqNRtalWJu1KezjceCxiLg3Wb6VVuDPSdrU1tL5wXI7GB8fP/26Wq1SrVZTKMvMsjA5eZCxsb0M\nD1c4darOxMR+9uy5Kuuy+l6tVqNWq/W0j557+ACSvg58ICIelXQDsC751lMRcaOk64CRiNi3xLbu\n4ZsNiEajwejoFprNKWAbcIRSaQezs0cpl8tZlzdQuunhp3GGD3At8HlJQ8B/A+8FXgLcLOl9wCxw\nZUrHMrOcqtfrDA9XaDa3JWu2MTQ0Sr1ed+DnQCqBHxHfAi5e4ls709i/mfWHSqXVxoEjLJzhz8/P\nUqlUMq3LWjzS1sxSUy6XmZjYT6m0gw0btlMq7WBiYr/P7nMilR5+TwW4h282cBqNBvV6nUql4rBf\nId308B34ZmZ9KKuBV2Zm1gcc+GZmBeHANzMrCAe+mVlBOPDNzArCgW9mVhAOfDOzgnDgm5kVhAPf\nzKwgHPhmZgXhwDczKwgHvplZQTjwzcwKwoFvZlYQDnwzs4Jw4JuZFUQqz7SVVAdOAM8A8xFxiaQR\n4CAwCtSBKyPiRBrHMzOzzqV1hv8MUI2ICyPikmTdPuDuiDgPuAe4PqVjmZlZF9IKfC2xryuAA8nr\nA8DulI5lZmZdSCvwA7hL0rSk9yfrNkXEHEBEHAc2pnQsMzPrQio9fOCyiHhSUhk4JOkYrX8E2i37\npPLx8fHTr6vVKtVqNaWyzCwNjUaDer1OpVKhXC5nXU4h1Wo1arVaT/tQxLI53N0OpRuAk8D7afX1\n5yRtBqYiYusS74+0azCz9ExOHmRsbC/DwxVOnaozMbGfPXuuyrqswpNERKijbXoNW0nrgDURcVLS\nS4FDwF8BlwNPRcSNkq4DRiJi3xLbO/DNcqrRaDA6uoVmcwrYBhyhVNrB7OxRn+lnrJvAT6Olswm4\nTVIk+/t8RBySdC9ws6T3AbPAlSkcy8xWUb1eZ3i4QrO5LVmzjaGhUer1ugO/D/Uc+BHxP8CvL7H+\nKWBnr/s3s+xUKq02Dhxh4Qx/fn6WSqWSaV3WHY+0NbNllctlJib2UyrtYMOG7ZRKO5iY2O+z+z6V\n+kXbjgtwD98s93yXTv5kctG2Vw58M7POdRP4bumYmRWEA9/MrCAc+GZmBeHANzMrCAe+mVlBOPDN\nzArCgW9mVhAOfDOzgnDgm5kVhAPfzKwgHPhmZgXhwDczKwgHvplZQTjwzcwKwoFvZlYQDnwzK6xG\no8H09DSNRiPrUlZFaoEvaY2k+yXdkSyPSDok6ZikOyWdndaxzMx6NTl5kNHRLeza9UFGR7cwOXkw\n65JWXGpPvJL0x8BFwIaIeKekG4EfRcQnJF0HjETEviW28xOvzGxVNRoNRke30GxOsfBw9lJpB7Oz\nR/vmEY6ZPfFK0jnA24F/aFt9BXAgeX0A2J3GsczMelWv1xkertAKe4BtDA2NUq/XsytqFaTV0vkk\n8GdA+6n6poiYA4iI48DGlI5lZtaTSqXCqVN14Eiy5gjz87NUKpXsiloFa3vdgaR3AHMR8aCk6hne\numzfZnx8/PTrarVKtXqm3ZiZ9aZcLjMxsZ+xsR0MDY0yPz/LxMT+XLdzarUatVqtp3303MOX9DHg\nD4CngRLwMuA24DeAakTMSdoMTEXE1iW2dw/fzDLRaDSo1+tUKpVch/1Suunhp3bRNingzcCfJBdt\nP0Hrou2NvmhrZpauzC7aLuPjwC5Jx4DLk2UzM8tIqmf4XRXgM3wzs47l7QzfzMxyxIFvZlYQDnwz\ns4Jw4JuZFYQD38ysIBz4ZmYF4cC33CnaHOVmq8WBb7lSxDnKzVaLB15ZbgzCHOVmq8UDr6yvFXWO\ncrPV4sC33CjqHOVmq8WBb7mxMEd5qbSDDRu2UyrtyP0c5Wb9xD18y51+nqPcbLVkPh9+Nxz4Zmad\n80VbMzNblgPfzKwgHPhmZgXhwDczKwgHvplZQfQc+JLOkvRNSQ9IekjSDcn6EUmHJB2TdKeks3sv\n18zMupXKbZmS1kXETyW9BPgP4FrgXcCPIuITkq4DRiJi3xLb+rZMM7MOZXZbZkT8NHl5FrAWCOAK\n4ECy/gCwO41jmZlZd1IJfElrJD0AHAfuiohpYFNEzAFExHFgYxrHMjOz7qxNYycR8QxwoaQNwG2S\nLqB1lv+cty23/fj4+OnX1WqVarWaRllmZgOjVqtRq9V62kfqUytI+kvgp8D7gWpEzEnaDExFxNYl\n3u8evplZhzLp4Ut65cIdOJJKwC5gBrgDuDp523uA23s9lpmZda/nM3xJr6d1UXZN8nUwIv5a0iuA\nm4FXAbPAlRHxv0ts7zN8M7MOebZMM7OC8GyZZma2LAe+2YBpNBpMT0/TaDSyLsVyxoFvNkAmJw8y\nOrqFXbs+yOjoFiYnD2ZdkuWIe/hmA6LRaDA6uoVmcwrYBhyhVNrB7OxRPypyALmHb1Zg9Xqd4eEK\nrbAH2MbQ0Cj1ej27oixXHPhmA6JSqXDqVB04kqw5wvz8LJVKJbuiLFcc+GYDolwuMzGxn1JpBxs2\nbKdU2sHExH63c+w09/DNBkyj0aBer1OpVBz2A8wDr8zMCsIXbc3MbFkOfDOzgnDgm5kVhAPfnsPD\n8s0GlwPfTvOwfLPB5rt0DPCwfLN+47t0rGtpDst3W8gsnxz4BqQ3LN9tIbP8ckvHTpucPMjY2F6G\nhkaZn59lYmI/e/Zc9aK3d1vIbPV009JZu1LFWP/Zs+cqdu78ra6H5S+0hZrN57eFHPhm2es58CWd\nA/wjsAl4Bvj7iPgbSSPAQWAUqNN6iPmJXo9nK6tcLncdzs9tC7XO8D1bo1l+pNHDfxr4aERcALwJ\n+JCkLcA+4O6IOA+4B7g+hWNZjnm2RrN8S72HL+nLwE3J15sjYk7SZqAWEVuWeL97+APGszWarbzM\nZ8uUVAFqwK8Bj0XESNv3noqIVyyxjQPfzKxDmV60lbQe+BLwkYg4KWlxii+b6uPj46dfV6tVqtVq\nWmWZmQ2EWq1GrVbraR+pnOFLWgv8M/C1iPhUsm4GqLa1dKYiYusS2/oM38ysQ1mOtP0M8MhC2Cfu\nAK5OXr8HuD2lY5mZWRd6PsOXdBnwr8BDtNo2Afw5cBi4GXgVMEvrtsz/XWJ7n+H3MV+gNctG5hdt\nu+HA718LI3OHh1v333c6MtfMuufA7yP9fmb87DQKtwIvBX5CqfQuT6Ngtko8W2afGIQJxlqzaL4c\neBfwQeBdRGzoanZNM1sdDvxV1mg0GBvbS7M5xYkT99FsTjE2trfvphJev349zeaTwBRwHzDFz342\nx/r16zOuzMyW48BfZWnOO5+lkydPUiq9jvafo1R6LSdPnsyyLDM7Awf+Kktr3vmstep9gvafA77f\ndz+HWZE48FfZoEwwNig/h1mR+C6djPT7XToLBuXnMOs3vi3TzKwgfFummZkty4E/wBqNBtPT0313\ny+dK8Gdh5sAfWIMwuCst/izMWtzDH0DPTnswxcKzZUulHYWc9sCfhQ0q9/ANGJzBXWnwZ2H2LAf+\nABqUwV1p8Gdh9iwH/gDyoKhn+bMwe5Z7+APMg6Ke5c/CBo0HXpmZFYQv2prlnMcDWJYc+GarxOMB\nLGuptHQkTQC/A8xFxLZk3QhwEBgF6rQeYn5iiW3d0rGB5/EAlrYsWzqfBX570bp9wN0RcR5wD3B9\nSscy6zseD2B5kErgR8S/Az9etPoK4EDy+gCwO41jmfUjjwewPFjJHv7GiJgDiIjjwMYVPJZZrnk8\ngOXB2lU81rKN+vHx8dOvq9Uq1Wp1FcqxfjEo99Dv2XMVO3f+1kD8LLb6arUatVqtp32kdh++pFHg\nK20XbWeAakTMSdoMTEXE1iW280VbW9bk5EHGxvYyPNxqiUxM7GfPnquyLsssc5kOvJJUoRX4r0+W\nbwSeiogbJV0HjETEviW2c+Dbknxni9nyMrtLR9IXgP8EzpX0PUnvBT4O7JJ0DLg8WTZ70Xxni1m6\nUunhR8TvL/OtnWns34rpuXe2tM7wfWeLWfc80tZyy3e2mKXLk6dZ7g3KXTpmafJsmWZmBeHZMnPM\nsySaWdYc+KvAsySaWR64pbPCfC+5ma0Et3RWSSftmZW8l9xtIjPrhAO/Q522Z1ZqlkS3icysU27p\ndKDb9szCfDBDQ6PMz8/2PB+M20Rm1k1LZzVny+x7C+2ZZvP57ZkzBe1SsyT2cm95t3WYWbG5pdOB\nXtoz5XKZiy++mHK53HM7xg/TMLNuOPA7kMZQ/0ajwdjYXprNKU6cuI9mc4qxsb0dXXj1lANm1g33\n8LvQSztmenqaXbs+yIkT951et2HDdm655eOMjIx0tE9POWBWXJ5aoQ8sdcF1ePg3WbNGnHXWr/oh\nH2b2ojjw+8Tiu3aefvoU8/P/ge+4MbMXy4HfRxbaMT/+8Y/ZvftPaTaPnP5eqfR6vv71z3DxxRdn\nWKGZ5Zlvy+wj5XKZcrnMzMwMzeZ3aH/IR7P5XdavX59xhWY2aBz4GTt58iSl0maazR3AKDDLL/3S\nJk6ePJlJPb4QbDa4Vvy2TElvlXRU0qPJw8ytTeve+RPArcDfAbci/V8m99R7ugazwbaiPXxJa4BH\naT3E/PvANPDuiDja9p5C9vDbpT31Qjc8XYNZf8ljD/8S4NsRMQsg6YvAFcDRM241AGZmZjh8+DCX\nXHIJW7duPeN7l5p6YbV5ugazwbfSLZ1fAR5rW348WTfQPvzhP+L88y/i6qs/xvnnX8SHP/yRF9ym\nfeqFLHi6BrPB56kVUjYzM8NNN30a+AZwDPgGN93098zMzGRc2Zl5ugazwbfSLZ0ngFe3LZ+TrHuO\n8fHx06+r1SrVanWFy1o5hw8fBl5F+wNP4BwOHz78gq2drOWhtWRmS6vVatRqtZ72sdIXbV9C6zT3\ncuBJ4DCwJyJm2t4zUBdtZ2ZmOP/8i2id4bcufsKlPPLIfbkPfDPrH7l7xGFE/AK4BjgEPAx8sT3s\nB9HWrVu55poPAJcC5wKXcs01H3DYm1nmPLXCCunkLh0zs055Lh0zs4LIXUvHzMzyw4FvZlYQDnwz\ns4Jw4JuZFYQD38ysIBz4ZmYF4cA3MysIB76ZWUE48M3MCsKBb2ZWEA58M7OCcOCbmRWEA9/MrCAc\n+GZmBeHANzMrCAe+mVlBOPDNzArCgW9mVhA9Bb6k35P0X5J+IWn7ou9dL+nbkmYkvaW3Ms3MrFe9\nnuE/BPwu8PX2lZK2AlcCW4G3AfsldfTsxbyp1WpZl/CiuM50uc709EON0D91dqOnwI+IYxHxbWBx\nmF8BfDEino6IOvBt4JJejpW1fvlD4DrT5TrT0w81Qv/U2Y2V6uH/CvBY2/ITyTozM8vI2hd6g6S7\ngE3tq4AA/iIivrJShZmZWboUEb3vRJoC/iQi7k+W9wERETcmy/8C3BAR31xi294LMDMroIjo6Nro\nC57hd6D9wHcAn5f0SVqtnNcBh5faqNOCzcysO73elrlb0mPApcA/S/oaQEQ8AtwMPAJ8FdgbafxX\nwszMupZKS8fMzPIvs5G2/TRoS9JbJR2V9Kik67KuZ4GkCUlzko60rRuRdEjSMUl3Sjo74xrPkXSP\npIclPSTp2pzWeZakb0p6IKnzhjzWuUDSGkn3S7ojWc5dnZLqkr6VfKaHc1zn2ZJuSfLmYUlvzFud\nks5NPsf7k19PSLq20zqznFqhLwZtSVoD3AT8NnABsEfSlqzqWeSztOpqtw+4OyLOA+4Brl/1qp7r\naeCjEXEB8CbgQ8nnl6s6I+LnwI6IuBD4deBtki4hZ3W2+QitlumCPNb5DFCNiAsjYmEcTh7r/BTw\n1YjYCrwBOErO6oyIR5PPcTtwEfAT4DY6rTMiMv0CpoDtbcv7gOvalr8GvDHD+i4FvrZcfVl/AaPA\nkbblo8Cm5PVm4GjWNS6q98vAzjzXCawD7gUuzmOdwDnAXUAVuCOvv+/A/wC/vGhdruoENgDfXWJ9\nrupcVNtbgH/rps48Tp6Wt0Fbi+t5nHwPItsYEXMAEXEc2JhxPadJqtA6e/4GrT+kuaozaZM8ABwH\n7oqIaXJYJ/BJ4M9ojYdZkMc6A7hL0rSk9yfr8lbna4AfSvps0i75tKR15K/OdlcBX0hed1Rnmrdl\nPo8HbeVCLq7KS1oPfAn4SEScXGL8ReZ1RsQzwIWSNgC3SbqA59eVaZ2S3gHMRcSDkqpneGvmnydw\nWUQ8KakMHJJ0jJx9nrQycDvwoYi4N7mVfB/5qxMASUPAO4GFa4kd1bmigR8Ru7rY7AngVW3L5yTr\nsvIE8Oq25azreSFzkjZFxJykzcAPsi5I0lpaYf+5iLg9WZ27OhdExP9JqgFvJX91Xga8U9LbgRLw\nMkmfA47nrE4i4snk14akL9OaTytvn+fjwGMRcW+yfCutwM9bnQveBtwXET9MljuqMy8tncWDtt4t\naVjSazjDoK1VMg28TtKopGHg3UmNeSGe//ldnbx+D3D74g0y8BngkYj4VNu6XNUp6ZULdzhIKgG7\ngBlyVmdE/HlEvDoifpXWn8V7IuIPga+QozolrUv+V4ekl9LqOz9E/j7POeAxSecmqy4HHiZndbbZ\nA0y2LXdWZ4YXHnbT6o03gSd57oXR64Hv0PoL95YcXCR5K3CM1qyf+7Kup62uLwDfB34OfA94LzAC\n3J3Uewh4ecY1Xgb8AngQeAC4P/k8X5GzOl+f1PYgcIRW25G81bmo5jfz7EXbXNVJqze+8Hv+0MLf\nm7zVmdT0Blondg8C/wScndM61wEN4GVt6zqq0wOvzMwKIi8tHTMzW2EOfDOzgnDgm5kVhAPfzKwg\nHPhmZgXhwDczKwgHvplZQTjwzcwK4v8BTfvYykQed44AAAAASUVORK5CYII=\n",
+      "text/plain": [
+       "<matplotlib.figure.Figure at 0x11630f910>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "plt.scatter(df['AUS'], df['AUS_prev'])\n",
+    "plt.show"
    ]
   },
   {
